[gd_scene load_steps=117 format=2]

[ext_resource path="res://Assets/Scenes/Player_.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Player_/Down/Idle/player_down_v3_00.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Player_/Down/Idle/player_down_v3_01.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Player_/Down/Idle/player_down_v3_02.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Player_/Down/Idle/player_down_v3_03.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Player_/Down/Idle/player_down_v3_04.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Player_/Down/Jump/player_down_v3_00.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Player_/Down/Jump/player_down_v3_01.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Player_/Down/Jump/player_down_v3_02.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Player_/Down/Jump/player_down_v3_03.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Player_/Down/Jump/player_down_v3_17.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Player_/Down/Fall/player_down_v3_17.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Player_/Down/Static/player_down_v3_00.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/Player_/Down/Walk/player_down_v3_05.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/Player_/Down/Walk/player_down_v3_06.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/Player_/Down/Walk/player_down_v3_07.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/Player_/Down/Walk/player_down_v3_08.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/Player_/Down/Walk/player_down_v3_09.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/Player_/Down/Walk/player_down_v3_10.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprites/Player_/Down/Walk/player_down_v3_11.png" type="Texture" id=20]
[ext_resource path="res://Assets/Sprites/Player_/Down/Walk/player_down_v3_12.png" type="Texture" id=21]
[ext_resource path="res://Assets/Sprites/Player_/Down/Walk/player_down_v3_13.png" type="Texture" id=22]
[ext_resource path="res://Assets/Sprites/Player_/Down/Walk/player_down_v3_14.png" type="Texture" id=23]
[ext_resource path="res://Assets/Sprites/Player_/Down/Walk/player_down_v3_15.png" type="Texture" id=24]
[ext_resource path="res://Assets/Sprites/Player_/Down/Walk/player_down_v3_16.png" type="Texture" id=25]
[ext_resource path="res://Assets/Sprites/Player_/Up/Idle/player_up_v3_00.png" type="Texture" id=26]
[ext_resource path="res://Assets/Sprites/Player_/Up/Idle/player_up_v3_01.png" type="Texture" id=27]
[ext_resource path="res://Assets/Sprites/Player_/Up/Idle/player_up_v3_02.png" type="Texture" id=28]
[ext_resource path="res://Assets/Sprites/Player_/Up/Idle/player_up_v3_03.png" type="Texture" id=29]
[ext_resource path="res://Assets/Sprites/Player_/Up/Idle/player_up_v3_04.png" type="Texture" id=30]
[ext_resource path="res://Assets/Sprites/Player_/Smash/smash_00.png" type="Texture" id=31]
[ext_resource path="res://Assets/Sprites/Player_/Smash/smash_01.png" type="Texture" id=32]
[ext_resource path="res://Assets/Sprites/Player_/Smash/smash_02.png" type="Texture" id=33]
[ext_resource path="res://Assets/Sprites/Player_/Smash/smash_03.png" type="Texture" id=34]
[ext_resource path="res://Assets/Sprites/Player_/Smash/smash_04.png" type="Texture" id=35]
[ext_resource path="res://Assets/Sprites/Player_/Up/Jump/player_up_v3_00.png" type="Texture" id=36]
[ext_resource path="res://Assets/Sprites/Player_/Up/Jump/player_up_v3_01.png" type="Texture" id=37]
[ext_resource path="res://Assets/Sprites/Player_/Up/Jump/player_up_v3_02.png" type="Texture" id=38]
[ext_resource path="res://Assets/Sprites/Player_/Up/Jump/player_up_v3_03.png" type="Texture" id=39]
[ext_resource path="res://Assets/Sprites/Player_/Up/Jump/player_up_v3_17.png" type="Texture" id=40]
[ext_resource path="res://Assets/Sprites/Player_/Up/Static/player_up_v3_00.png" type="Texture" id=41]
[ext_resource path="res://Assets/Sprites/Player_/Smash/smash_05.png" type="Texture" id=42]
[ext_resource path="res://Assets/Sprites/Player_/Smash/smash_06.png" type="Texture" id=43]
[ext_resource path="res://Assets/Sprites/Player_/Smash/smash_07.png" type="Texture" id=44]
[ext_resource path="res://Assets/Sprites/Player_/Smash/smash_08.png" type="Texture" id=45]
[ext_resource path="res://Assets/Sprites/Player_/Smash/smash_09.png" type="Texture" id=46]
[ext_resource path="res://Assets/Sprites/Player_/Up/Walk/player_up_v3_05.png" type="Texture" id=47]
[ext_resource path="res://Assets/Sprites/Player_/Up/Walk/player_up_v3_06.png" type="Texture" id=48]
[ext_resource path="res://Assets/Sprites/Player_/Up/Walk/player_up_v3_07.png" type="Texture" id=49]
[ext_resource path="res://Assets/Sprites/Player_/Up/Walk/player_up_v3_09.png" type="Texture" id=50]
[ext_resource path="res://Assets/Sprites/Player_/Up/Walk/player_up_v3_08.png" type="Texture" id=51]
[ext_resource path="res://Assets/Sprites/Player_/Up/Walk/player_up_v3_10.png" type="Texture" id=52]
[ext_resource path="res://Assets/Sprites/Player_/Up/Walk/player_up_v3_11.png" type="Texture" id=53]
[ext_resource path="res://Assets/Sprites/Player_/Up/Walk/player_up_v3_12.png" type="Texture" id=54]
[ext_resource path="res://Assets/Sprites/Player_/Up/Walk/player_up_v3_13.png" type="Texture" id=55]
[ext_resource path="res://Assets/Sprites/Player_/Up/Walk/player_up_v3_15.png" type="Texture" id=56]
[ext_resource path="res://Assets/Sprites/Player_/Up/Walk/player_up_v3_14.png" type="Texture" id=57]
[ext_resource path="res://Assets/Sprites/Player_/Up/Walk/player_up_v3_16.png" type="Texture" id=58]
[ext_resource path="res://Assets/Sprites/Player_/Up/Shooting/player_up_v3_25.png" type="Texture" id=59]
[ext_resource path="res://Assets/Sprites/Player_/Up/Shooting/player_up_v3_26.png" type="Texture" id=60]
[ext_resource path="res://Assets/Sprites/Player_/Up/Shooting/player_up_v3_27.png" type="Texture" id=61]
[ext_resource path="res://Assets/Sprites/Player_/Up/Shooting/player_up_v3_28.png" type="Texture" id=62]
[ext_resource path="res://Assets/Sprites/Player_/Up/Shooting/player_up_v3_29.png" type="Texture" id=63]
[ext_resource path="res://Assets/Sprites/Player_/Up/Shooting/player_up_v3_30.png" type="Texture" id=64]
[ext_resource path="res://Assets/Sprites/Player_/Up/Shooting/player_up_v3_31.png" type="Texture" id=65]
[ext_resource path="res://Assets/Sprites/Player_/Up/Shooting/player_up_v3_32.png" type="Texture" id=66]
[ext_resource path="res://Assets/Sprites/Player_/Up/Shooting/player_up_v3_33.png" type="Texture" id=67]
[ext_resource path="res://Assets/Sprites/Player_/Up/Shooting/player_up_v3_34.png" type="Texture" id=68]
[ext_resource path="res://Assets/Sprites/Player_/Up/Shooting/player_up_v3_35.png" type="Texture" id=69]
[ext_resource path="res://Assets/Sprites/Player_/Up/Death/player_up_v3_19A.png" type="Texture" id=70]
[ext_resource path="res://Assets/Sprites/Player_/Up/Death/player_up_v3_19B.png" type="Texture" id=71]
[ext_resource path="res://Assets/Sprites/Player_/Up/Death/player_up_v3_19C.png" type="Texture" id=72]
[ext_resource path="res://Assets/Sprites/Player_/Up/Death/player_up_v3_21A.png" type="Texture" id=73]
[ext_resource path="res://Assets/Sprites/Player_/Up/Death/player_up_v3_21B.png" type="Texture" id=74]
[ext_resource path="res://Assets/Sprites/Player_/Up/Death/player_up_v3_21C.png" type="Texture" id=75]
[ext_resource path="res://Assets/Sprites/Player_/Up/Death/player_up_v3_21D.png" type="Texture" id=76]
[ext_resource path="res://Assets/Sprites/Player_/Up/Death/player_up_v3_22.png" type="Texture" id=77]
[ext_resource path="res://Assets/Sprites/Player_/Up/Death/player_up_v3_23.png" type="Texture" id=78]
[ext_resource path="res://Assets/Sprites/Player_/Up/Death/player_up_v3_24.png" type="Texture" id=79]
[ext_resource path="res://Assets/Sprites/Player_/RHand/cowboy_full_RHAND_v4_00.png" type="Texture" id=80]
[ext_resource path="res://Assets/Sprites/Player_/RHand/cowboy_full_RHAND_v4_01.png" type="Texture" id=81]
[ext_resource path="res://Assets/Sprites/Player_/RHand/cowboy_full_RHAND_v4_02.png" type="Texture" id=82]
[ext_resource path="res://Assets/Sprites/Player_/RHand/cowboy_full_RHAND_v4_03.png" type="Texture" id=83]
[ext_resource path="res://Assets/Sprites/Player_/RHand/cowboy_full_RHAND_v4_04.png" type="Texture" id=84]
[ext_resource path="res://Assets/Sprites/Player_/RHand/cowboy_full_RHAND_v4_05.png" type="Texture" id=85]
[ext_resource path="res://Assets/Sprites/Player_/RHand/cowboy_full_RHAND_v4_06.png" type="Texture" id=86]
[ext_resource path="res://Assets/Sprites/Player_/RHand/cowboy_full_RHAND_v4_07.png" type="Texture" id=87]
[ext_resource path="res://Assets/Sprites/Player_/RHand/cowboy_full_RHAND_v4_08.png" type="Texture" id=88]
[ext_resource path="res://Assets/Sprites/Player_/RHand/cowboy_full_RHAND_v4_09.png" type="Texture" id=89]
[ext_resource path="res://Assets/Sprites/Player_/RHand/cowboy_full_RHAND_v4_10.png" type="Texture" id=90]
[ext_resource path="res://Assets/Sprites/Player_/RHand/cowboy_full_RHAND_v4_999.png" type="Texture" id=91]
[ext_resource path="res://Assets/Sprites/Player_/AimArrow/aim_arrow_01.png" type="Texture" id=92]
[ext_resource path="res://Assets/Sprites/Player_/AimArrow/aim_arrow_02.png" type="Texture" id=93]
[ext_resource path="res://Assets/Sprites/Player_/AimArrow/aim_arrow_03.png" type="Texture" id=94]
[ext_resource path="res://Assets/Sprites/Player_/AimArrow/aim_arrow_04.png" type="Texture" id=95]
[ext_resource path="res://Assets/Sprites/Player_/AimArrow/aim_arrow_05.png" type="Texture" id=96]
[ext_resource path="res://Assets/Sprites/Player_/AimArrow/aim_arrow_06.png" type="Texture" id=97]
[ext_resource path="res://Assets/Sprites/Player_/AimArrow/aim_arrow_07.png" type="Texture" id=98]
[ext_resource path="res://Assets/Sprites/Player_/AimArrow/aim_arrow_08.png" type="Texture" id=99]
[ext_resource path="res://Assets/Sprites/Player_/AimArrow/aim_arrow_09.png" type="Texture" id=100]
[ext_resource path="res://Assets/Sprites/Player_/AimArrow/aim_arrow_10.png" type="Texture" id=101]
[ext_resource path="res://Assets/Sprites/Player_/AimArrow/aim_arrow_11.png" type="Texture" id=102]
[ext_resource path="res://Assets/Sprites/Player_/AimArrow/aim_arrow_12.png" type="Texture" id=103]
[ext_resource path="res://Assets/Sprites/Player_/AimArrow/aim_arrow_13.png" type="Texture" id=104]
[ext_resource path="res://Assets/Sprites/Player_/AimArrow/aim_arrow_14.png" type="Texture" id=105]
[ext_resource path="res://Assets/Sprites/Player_/AimArrow/aim_arrow_15.png" type="Texture" id=106]
[ext_resource path="res://Assets/Sprites/Player_/AimArrow/aim_arrow_16.png" type="Texture" id=107]
[ext_resource path="res://Assets/Sprites/Player_/AimArrow/aim_arrow_17.png" type="Texture" id=108]
[ext_resource path="res://Assets/Scenes/Interface.tscn" type="PackedScene" id=109]
[ext_resource path="res://Assets/Scenes/SoundFX.tscn" type="PackedScene" id=110]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 22 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 22 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "Idle",
"speed": 7.0
}, {
"frames": [  ],
"loop": true,
"name": "Smash",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": false,
"name": "Jump",
"speed": 20.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": false,
"name": "Fall",
"speed": 0.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": false,
"name": "Static",
"speed": 0.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": true,
"name": "Walk",
"speed": 13.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "Idle",
"speed": 7.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ) ],
"loop": false,
"name": "Smash",
"speed": 50.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ) ],
"loop": false,
"name": "Jump",
"speed": 20.0
}, {
"frames": [ ExtResource( 41 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ) ],
"loop": true,
"name": "Dashing",
"speed": 100.0
}, {
"frames": [ ExtResource( 41 ) ],
"loop": false,
"name": "Static",
"speed": 0.0
}, {
"frames": [ ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ) ],
"loop": true,
"name": "Walk",
"speed": 13.0
}, {
"frames": [ ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ) ],
"loop": false,
"name": "Shooting",
"speed": 60.0
}, {
"frames": [ ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ) ],
"loop": false,
"name": "Dead",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ) ],
"loop": true,
"name": "Idle",
"speed": 7.0
}, {
"frames": [  ],
"loop": true,
"name": "Smash",
"speed": 5.0
}, {
"frames": [ ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ) ],
"loop": false,
"name": "Jump",
"speed": 20.0
}, {
"frames": [ ExtResource( 80 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ) ],
"loop": false,
"name": "Fall",
"speed": 100.0
}, {
"frames": [ ExtResource( 80 ) ],
"loop": false,
"name": "Static",
"speed": 0.0
}, {
"frames": [ ExtResource( 80 ), ExtResource( 80 ), ExtResource( 91 ), ExtResource( 80 ), ExtResource( 80 ), ExtResource( 80 ), ExtResource( 80 ), ExtResource( 80 ), ExtResource( 91 ), ExtResource( 80 ), ExtResource( 80 ), ExtResource( 80 ) ],
"loop": true,
"name": "Walk",
"speed": 13.0
}, {
"frames": [ ExtResource( 80 ), ExtResource( 80 ), ExtResource( 80 ), ExtResource( 80 ), ExtResource( 80 ), ExtResource( 80 ), ExtResource( 80 ), ExtResource( 80 ), ExtResource( 80 ), ExtResource( 80 ), ExtResource( 80 ) ],
"loop": false,
"name": "Shooting",
"speed": 60.0
}, {
"frames": [ ExtResource( 80 ), ExtResource( 80 ), ExtResource( 80 ), ExtResource( 80 ), ExtResource( 80 ), ExtResource( 80 ), ExtResource( 80 ), ExtResource( 80 ), ExtResource( 80 ), ExtResource( 80 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 89 ), ExtResource( 88 ), ExtResource( 87 ), ExtResource( 86 ), ExtResource( 85 ) ],
"loop": false,
"name": "Throw",
"speed": 60.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 92 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 96 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 105 ), ExtResource( 106 ), ExtResource( 107 ), ExtResource( 108 ) ],
"loop": true,
"name": "EnergyFlow",
"speed": 80.0
} ]

[node name="Player_" type="KinematicBody2D"]
z_index = 2
collision_mask = 13
script = ExtResource( 1 )

[node name="OBJECT_DETECTION_Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="OBJECT_DETECTION_Area2D"]
position = Vector2( 21, 0 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 28, -4 )

[node name="DARKBALL_SPOT_Position2D" type="Position2D" parent="."]
position = Vector2( -11, 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="DOWNBODY_AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "Smash"

[node name="UPBODY_AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "Dashing"

[node name="RIGHTHAND_AnimatedSprite" type="AnimatedSprite" parent="."]
editor/display_folded = true
frames = SubResource( 5 )
animation = "Smash"

[node name="ANTI_ANIM_CRASH_Timer" type="Timer" parent="RIGHTHAND_AnimatedSprite"]
wait_time = 0.2

[node name="AIMARROW" type="Node2D" parent="."]
visible = false

[node name="AIMARROW_BACKMETER_Sprite" type="Sprite" parent="AIMARROW"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -50 )
z_index = 10
texture = ExtResource( 92 )

[node name="AIMARROW_AnimatedSprite" type="AnimatedSprite" parent="AIMARROW"]
modulate = Color( 0.827451, 0, 1, 1 )
position = Vector2( -7.10543e-015, -6.34128 )
scale = Vector2( 0.859375, 0.887057 )
z_index = 10
frames = SubResource( 6 )
animation = "EnergyFlow"
offset = Vector2( 0, -49 )

[node name="AIMARROW_GLOW_Timer" type="Timer" parent="AIMARROW"]
wait_time = 8.0

[node name="AIMARROW_SUPERTHROW_Timer" type="Timer" parent="AIMARROW"]
wait_time = 5.0

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.3, 1.3 )
smoothing_enabled = true
smoothing_speed = 7.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="Interface" type="CanvasLayer" parent="."]
scale = Vector2( 0.6, 0.6 )
transform = Transform2D( 0.6, 0, 0, 0.6, 0, 0 )

[node name="HUD" parent="Interface" instance=ExtResource( 109 )]

[node name="FADE_Timer" type="Timer" parent="Interface"]
process_mode = 0
wait_time = 0.01

[node name="SoundFX" parent="." instance=ExtResource( 110 )]

[node name="DASH_Timer" type="Timer" parent="."]
one_shot = true

[node name="DASH_COOLDOWN_Timer" type="Timer" parent="."]
[connection signal="animation_finished" from="DOWNBODY_AnimatedSprite" to="." method="_on_DOWNBODY_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="UPBODY_AnimatedSprite" to="." method="_on_UPBODY_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="RIGHTHAND_AnimatedSprite" to="." method="_on_RIGHTHAND_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="RIGHTHAND_AnimatedSprite/ANTI_ANIM_CRASH_Timer" to="." method="_on_ANTI_ANIM_CRASH_Timer_timeout"]
[connection signal="timeout" from="AIMARROW/AIMARROW_GLOW_Timer" to="." method="_on_AIMARROW_GLOW_Timer_timeout"]
[connection signal="timeout" from="AIMARROW/AIMARROW_SUPERTHROW_Timer" to="." method="_on_AIMARROW_SUPERTHROW_Timer_timeout"]
[connection signal="timeout" from="Interface/FADE_Timer" to="." method="_on_FADE_Timer_timeout"]
[connection signal="timeout" from="DASH_Timer" to="." method="_on_DASH_Timer_timeout"]
[connection signal="timeout" from="DASH_COOLDOWN_Timer" to="." method="_on_DASH_COOLDOWN_Timer_timeout"]
